# api/urls.py
@@ -1,6 +1,10 @@
 from django.urls import path
-from .views import HelloView
+from .views import HelloView, RegisterView, LoginView, LogoutView, MeView
 
 urlpatterns = [
     path("hello/", HelloView.as_view(), name="hello"),
+    path("auth/register", RegisterView.as_view(), name="register"),
+    path("auth/login", LoginView.as_view(), name="login"),
+    path("auth/logout", LogoutView.as_view(), name="logout"),
+    path("me", MeView.as_view(), name="me"),
 ]
